# homelab-v2

./: .gitignore  Pulumi.yaml  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: cd.yaml  ci.yaml
src/: __init__.py
src/infra/: __init__.py  __main__.py
tests/: conftest.py
tests/unit/: test_example.py
