[tool.poetry]
name = "homelab-infra"
version = "0.1.0"
description = "Pulumi infrastructure as code for homelab"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "infra", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
pulumi = ">=3.140.0"
pulumi-kubernetes = ">=4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-mock = ">=3.14.0"
pytest-cov = ">=4.1.0"
ruff = ">=0.4.0"
python-semantic-release = ">=9.0.0"
bandit = ">=1.7.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["infra"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
